# ChangeLog for media-libs/gstreamer
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.154 2006/07/14 16:21:11 dertobi123 Exp $

  14 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gstreamer-0.10.8.ebuild:
  ppc stable, bug #139612

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> gstreamer-0.10.8.ebuild:
  Mark 0.10.8 stable on ia64

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  gstreamer-0.10.8.ebuild:
  Stable on x86 wrt bug #139612.

  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gstreamer-0.10.8.ebuild:
  Stable on sparc wrt #139612

*gstreamer-0.10.8 (12 Jun 2006)

  12 Jun 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gstreamer-0.10.8.ebuild:
  version bump, also from now on gstreamer 0.10 requires glib 2.8

  29 May 2006; Guy Martin <gmsoft@gentoo.org> gstreamer-0.10.4.ebuild:
  Stable on hppa.

  21 May 2006; Thomas Cort <tcort@gentoo.org> gstreamer-0.10.4.ebuild:
  Stable on alpha.

*gstreamer-0.10.6 (15 May 2006)

  15 May 2006; Zaheer Merali <zaheerm@gentoo.org> +gstreamer-0.10.6.ebuild:
  version bump

  03 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gstreamer-0.10.4.ebuild:
  Stable on sparc wrt #128737

  03 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gstreamer-0.10.5.ebuild:
  Added to ~hppa, bug #125234

*gstreamer-0.10.5 (28 Apr 2006)

  28 Apr 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gstreamer-0.10.5.ebuild:
  version bump

  26 Apr 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  -gstreamer-0.10.0.ebuild, -gstreamer-0.10.1.ebuild,
  -gstreamer-0.10.2.ebuild, -gstreamer-0.10.3.ebuild:
  prune old versions

  17 Apr 2006; Markus Rothe <corsair@gentoo.org> gstreamer-0.10.4.ebuild:
  Stable on ppc64; bug #128737

  16 Apr 2006; Michael Hanselmann <hansmi@gentoo.org>
  gstreamer-0.10.4.ebuild:
  Stable on ppc.

  13 Apr 2006; Thomas Cort <tcort@gentoo.org> gstreamer-0.10.4.ebuild: