@@ -18,6 +18,7 @@ DIST gstreamer-0.10.4.tar.bz2 1518532 RMD160 3935ddd308cf1932b05057c6ded85383a99
 DIST gstreamer-0.10.5.tar.bz2 1620535 RMD160 86580316e711556058b03a8dede29e2615466239 SHA1 9c87b18134ebb024c0b5965d181e52a076b5be2f SHA256 1c055d04fc31ac5730a766743ece1402f93f967c8f815cd5c97112dfab8f4aa1
 DIST gstreamer-0.10.6.tar.bz2 1650208 RMD160 67ef7795afb44d7c3b954e6a0579b118fce1d4d4 SHA1 20d1434e91ea643f3a38a471765b36b33783ac7e SHA256 11d65e787ad24596af3f84744655f7c6ad0c747e2c285248dda4e5893d0b317a
 DIST gstreamer-0.10.8.tar.bz2 1679765 RMD160 fefa9f6efaf64fae5598e299166555513c6bcd1a SHA1 2b2b6c49e9f8a3dcb5cb602f744d33688eea59ae SHA256 e17b33586d9f4ff656ed04559ed765b50affc19309074ef5bdf4ff62f5a1c863
+DIST gstreamer-0.10.9.tar.bz2 1719970 RMD160 61e0632ea2f0b1200979146b1f9b522886350839 SHA1 b956a25520a44b9e3c1502a3574fec751d527981 SHA256 370e7cef8206522a4a8a80a05e935d6627c7381867e533b872f917d031a47e67
 DIST gstreamer-0.8.10.tar.bz2 1467038
 DIST gstreamer-0.8.11.tar.bz2 1459651 RMD160 bb471ba4f4c32bacc26d29efc1cb8577825ce1e9 SHA1 945b08e68f31f99621ce7c35d7ec3b7ac3e49b1e SHA256 29aaec0f345b614dfa8da97cef629d68f74b4523dd28cb0abc04352cf14e6064
 DIST gstreamer-0.8.12.tar.bz2 1534775 RMD160 76a0b39811b709499a91cad05667a6d3f316058c SHA1 796871cf4b3b71dfd8b6b459f7feec02e51b1010 SHA256 fd90caa93889bd0abbe41b4a36d2b7e27d3987650182004656f9dc4e6fbc3d8c
@@ -37,6 +38,10 @@ EBUILD gstreamer-0.10.8.ebuild 1959 RMD160 51753ced0e7a755cd7be330adb06a5c303c97
 MD5 4285ff2bd0abd89e2961ab8c288a6bf2 gstreamer-0.10.8.ebuild 1959
 RMD160 51753ced0e7a755cd7be330adb06a5c303c971cc gstreamer-0.10.8.ebuild 1959
 SHA256 0557f2992a9de8ca769736e15b70cc4bd0472561609d94e6f437cb3a9f5f743c gstreamer-0.10.8.ebuild 1959
+EBUILD gstreamer-0.10.9.ebuild 1960 RMD160 e22ac24e5f164b431f7b2e53a09e03d4ff902926 SHA1 0abbaf69e098a55d7afc1c1513bf98785fa6dddf SHA256 83e093f53ff596a2add797cd3565ba5f06636afc78858f69efa15b9f2360ac4e
+MD5 0f9ff71fdb22c79519dc4914a10a292e gstreamer-0.10.9.ebuild 1960
+RMD160 e22ac24e5f164b431f7b2e53a09e03d4ff902926 gstreamer-0.10.9.ebuild 1960
+SHA256 83e093f53ff596a2add797cd3565ba5f06636afc78858f69efa15b9f2360ac4e gstreamer-0.10.9.ebuild 1960
 EBUILD gstreamer-0.8.10.ebuild 2810 RMD160 8bf3d6052e2f43fcfae411ce1ad34c0b33050855 SHA1 23ac6df3b1f74d798aeae589e7ecb272f6cb4db4 SHA256 b7da5822edf38a674f98b814c924e05aa90b05e304beb86bd3ecd2041b523f83
 MD5 301bbbe66729c54178c3244326b42651 gstreamer-0.8.10.ebuild 2810
 RMD160 8bf3d6052e2f43fcfae411ce1ad34c0b33050855 gstreamer-0.8.10.ebuild 2810
@@ -49,10 +54,10 @@ EBUILD gstreamer-0.8.12.ebuild 2842 RMD160 0143c4cc48d02d44fbbcb7c4836b4384300df
 MD5 96b2d885faf135d2ae797253f2b2066c gstreamer-0.8.12.ebuild 2842
 RMD160 0143c4cc48d02d44fbbcb7c4836b4384300df9f7 gstreamer-0.8.12.ebuild 2842
 SHA256 3516fb4f5cd956f142d3118f1c92a0a589266948143aa94f7e39c400ea853009 gstreamer-0.8.12.ebuild 2842
-MISC ChangeLog 19863 RMD160 2991e31bac6af25dbf3c081256facfc2da38db5c SHA1 a80b2b8be2739314be55de45966d72e25d7c4efb SHA256 7f49b05acf16795b9f41d17cbe2762ebe53a7c0169265d40eb9a6c1b2f3b89ca
-MD5 5975a710b0798062bb5756dce139b1d2 ChangeLog 19863
-RMD160 2991e31bac6af25dbf3c081256facfc2da38db5c ChangeLog 19863
-SHA256 7f49b05acf16795b9f41d17cbe2762ebe53a7c0169265d40eb9a6c1b2f3b89ca ChangeLog 19863
+MISC ChangeLog 19971 RMD160 e87f2c45664927497b6af983ee0651c1b9728183 SHA1 773328d1a1f79d5fa06fb7343b6b969d0019d8df SHA256 f91ee62d7f6cd3eef0296363257843fb59692d248b2dd937c683c6733300284c
+MD5 802f1d7cc2d3781a133001f2622b25b8 ChangeLog 19971
+RMD160 e87f2c45664927497b6af983ee0651c1b9728183 ChangeLog 19971
+SHA256 f91ee62d7f6cd3eef0296363257843fb59692d248b2dd937c683c6733300284c ChangeLog 19971
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e metadata.xml 158
@@ -69,6 +74,9 @@ SHA256 5d90bc2f9f9532015ae1abd8cab1f04320d17db1f6ddad2412760deae307f1fc files/di
 MD5 7a3b323afab0b55843a0e89546fc6a1b files/digest-gstreamer-0.10.8 256
 RMD160 88d46616680512cad349026a3dddf8f30e2ac2b1 files/digest-gstreamer-0.10.8 256
 SHA256 e658693546c76f41fc1538ecb6e1880c80ce76f804a98a7491e518eaadff35a7 files/digest-gstreamer-0.10.8 256
+MD5 6711103585afc25d7a0102bd256735a6 files/digest-gstreamer-0.10.9 256
+RMD160 c55a547f125f3b3ab3dc0dac2cabd1dd580502f3 files/digest-gstreamer-0.10.9 256
+SHA256 208e651800f8d65f70177e10f2342a25c0cf56b1f04d07a44606021ec6e0b5df files/digest-gstreamer-0.10.9 256
 MD5 22f436d2188144ecb6918fc8960cb70e files/digest-gstreamer-0.8.10 70
 RMD160 95cceb15627c57a84f8bbfa948e134736adca9ff files/digest-gstreamer-0.8.10 70
 SHA256 f20822d5a64961062ce73e15d7e1f555ffec4e5825088d3fe5dfe35a5eb5c9cd files/digest-gstreamer-0.8.10 70
