@@ -1,0 +1,3 @@
+MD5 e59aaced7000ddfdaa81c52b9a238786 gstreamer-0.10.9.tar.bz2 1719970
+RMD160 61e0632ea2f0b1200979146b1f9b522886350839 gstreamer-0.10.9.tar.bz2 1719970
+SHA256 370e7cef8206522a4a8a80a05e935d6627c7381867e533b872f917d031a47e67 gstreamer-0.10.9.tar.bz2 1719970
