@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/gstreamer
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.154 2006/07/14 16:21:11 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.155 2006/07/15 09:24:56 zaheerm Exp $
+
+*gstreamer-0.10.9 (15 Jul 2006)
+
+  15 Jul 2006; <zaheerm@gentoo.org> +gstreamer-0.10.9.ebuild:
+  version bump
 
   14 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
   gstreamer-0.10.8.ebuild:
